--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ body {
 	max-width: 100%;
 }
 
-.skillsSection {
+.skillsSection,
+.contactSection {
 	background-color: #991a6f;
 	color: #fff;
 }
@@ -159,3 +160,22 @@ body {
 	margin-left: -20%;
 	color: #444;
 }
+
+.skills .container .row .col-md-12 text=center .hint {
+	font-size: 13px
+}
+
+.contactButton {
+	color: #fff;
+	padding: 15px 20px;
+	display: inline-block;
+	margin-top: 20px;
+	border: 1px solid #fff;
+	border-radius: 2px;
+}
+
+.contactButton:hover {
+	text-decoration: none;
+	color: #991a6f;
+	background-color: #fff;
+}	
