--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,21 @@ body {
 	color: #991a6f;
 	background-color: #fff;
 }
+
+.filter a {
+	color: #bdc3c7;
+	border: 1px solid #bdc3c7;
+	padding: 10px 18px;
+	display: block;
+}
+
+.filter li {
+	display: inline-block;
+	padding: 5px;
+}
+
+.filter .current {
+	background-color: #991a6f;
+	border-color: #991a6f;
+	color: #fff;
+}
